--- a/manuscripts/24-usman-mus-diversity/24-usman-msd.tex
+++ b/manuscripts/24-usman-mus-diversity/24-usman-msd.tex
@@ -248,7 +248,7 @@ New Zealand
       
 
 
-\date{2024-12-06}
+\date{2024-12-09}
 \begin{document}
 \maketitle
 \begin{abstract}
@@ -1404,7 +1404,7 @@ Table~\ref{tbl-discrim-ethnicity}, and Table~\ref{tbl-discrim-religion},
 
 }
 
-\caption{\label{fig-discrim}Religious and Spiritual Practices}
+\caption{\label{fig-discrim}Perceived Discrimination}
 
 \end{figure}%
 
@@ -1612,7 +1612,7 @@ Presby Congreg Reform & 1.60 & 0.04 & 1.52 & 1.68\\
 \begin{table}
 
 \caption{\label{tbl-health-sleep}Adjusted means and 95\% confidence
-intervals for weekly hours of sleep.}
+intervals for nightly hours of sleep.}
 
 \centering{
 
@@ -2463,19 +2463,19 @@ for belonging: feels accepted.}
 \toprule
 Religion & predicted & std.error & conf.low & conf.high\\
 \midrule
-\cellcolor{gray!10}{Not Religious} & \cellcolor{gray!10}{5.55} & \cellcolor{gray!10}{0.01} & \cellcolor{gray!10}{5.53} & \cellcolor{gray!10}{5.57}\\
-Muslim & 5.60 & 0.04 & 5.53 & 5.68\\
-\cellcolor{gray!10}{Anglican} & \cellcolor{gray!10}{5.58} & \cellcolor{gray!10}{0.04} & \cellcolor{gray!10}{5.50} & \cellcolor{gray!10}{5.67}\\
-Buddhist & 5.55 & 0.07 & 5.41 & 5.68\\
-\cellcolor{gray!10}{Catholic} & \cellcolor{gray!10}{5.71} & \cellcolor{gray!10}{0.03} & \cellcolor{gray!10}{5.65} & \cellcolor{gray!10}{5.77}\\
+\cellcolor{gray!10}{Not Religious} & \cellcolor{gray!10}{4.74} & \cellcolor{gray!10}{0.01} & \cellcolor{gray!10}{4.72} & \cellcolor{gray!10}{4.76}\\
+Muslim & 4.73 & 0.04 & 4.66 & 4.81\\
+\cellcolor{gray!10}{Anglican} & \cellcolor{gray!10}{4.85} & \cellcolor{gray!10}{0.04} & \cellcolor{gray!10}{4.76} & \cellcolor{gray!10}{4.93}\\
+Buddhist & 4.88 & 0.07 & 4.74 & 5.01\\
+\cellcolor{gray!10}{Catholic} & \cellcolor{gray!10}{4.83} & \cellcolor{gray!10}{0.03} & \cellcolor{gray!10}{4.77} & \cellcolor{gray!10}{4.89}\\
 \addlinespace
-Christian (NFD) & 5.67 & 0.02 & 5.63 & 5.72\\
-\cellcolor{gray!10}{Christian (Others)} & \cellcolor{gray!10}{5.56} & \cellcolor{gray!10}{0.04} & \cellcolor{gray!10}{5.48} & \cellcolor{gray!10}{5.64}\\
-Hindu & 5.45 & 0.07 & 5.31 & 5.60\\
-\cellcolor{gray!10}{Jewish} & \cellcolor{gray!10}{5.49} & \cellcolor{gray!10}{0.16} & \cellcolor{gray!10}{5.18} & \cellcolor{gray!10}{5.80}\\
-Presby Congreg Reform & 5.69 & 0.06 & 5.57 & 5.82\\
+Christian (NFD) & 4.75 & 0.02 & 4.70 & 4.79\\
+\cellcolor{gray!10}{Christian (Others)} & \cellcolor{gray!10}{4.81} & \cellcolor{gray!10}{0.04} & \cellcolor{gray!10}{4.74} & \cellcolor{gray!10}{4.89}\\
+Hindu & 4.56 & 0.07 & 4.41 & 4.70\\
+\cellcolor{gray!10}{Jewish} & \cellcolor{gray!10}{4.25} & \cellcolor{gray!10}{0.16} & \cellcolor{gray!10}{3.94} & \cellcolor{gray!10}{4.56}\\
+Presby Congreg Reform & 4.88 & 0.06 & 4.76 & 5.01\\
 \addlinespace
-\cellcolor{gray!10}{Other Religions} & \cellcolor{gray!10}{5.33} & \cellcolor{gray!10}{0.05} & \cellcolor{gray!10}{5.23} & \cellcolor{gray!10}{5.43}\\
+\cellcolor{gray!10}{Other Religions} & \cellcolor{gray!10}{4.44} & \cellcolor{gray!10}{0.05} & \cellcolor{gray!10}{4.35} & \cellcolor{gray!10}{4.54}\\
 \bottomrule
 \end{tabular}
 \endgroup{}
@@ -2590,7 +2590,7 @@ Presby Congreg Reform & 4.44 & 0.08 & 4.30 & 4.59\\
 
 \newpage{}
 
-\subsection{Conclusions}\label{conclusions}
+\subsection{Discussion}\label{discussion}
 
 \subsubsection{Discussion of Demographic and Sample Characteristics of
 the Muslim Diversity Study
@@ -3222,7 +3222,7 @@ get a lot of pleasure from owning expensive luxury goods. (r)
 
 \paragraph{Hours Children}\label{hours-children}
 
-No information available for this variable.
+\ldots.
 
 \paragraph{Hours Charity}\label{hours-charity}
 
