--- a/manuscripts/manuscripts.tex
+++ b/manuscripts/manuscripts.tex
@@ -217,296 +217,71 @@ may now exhibit low trust in science. \textbf{KEYWORDS}:
 
 \subsection{Introduction}\label{introduction}
 
-\subsubsection{Study 2: Categorical Mistrust in Science and Scientists
-over
-Time}\label{study-2-categorical-mistrust-in-science-and-scientists-over-time}
+\subsubsection{Sample Categorical Distributions Over
+Time}\label{sample-categorical-distributions-over-time}
 
-\begin{figure}
-
-\centering{
-
-\pandocbounded{\includegraphics[keepaspectratio]{manuscripts_files/figure-pdf/fig-science-categorical-1.pdf}}
-
-}
-
-\caption{\label{fig-science-categorical}(A) Predicted probability of
-classification for trust in science without adjusting for missingness
-(B) Predicted probability of classification for trust in science
-adjusting for missingness. Responses categories are low (1-3), medium
-(4-5), high (6-7) on the 1-7 ordinal scale.}
-
-\end{figure}%
-
-\begin{table}
-
-\caption{\label{tbl-categorical-science-observed}Predicted probability
-of classification for trust in science without adjusting for missing
-responses. Responses categories are low (1-3), medium (4-5), high
-(6-7).}
-
-\centering{
-
-\centering\begingroup\fontsize{12}{14}\selectfont
-
-\begin{tabular}[t]{lll}
-\toprule
-Years & Predicted (95\% CI) & Response\\
-\midrule
-\cellcolor{gray!10}{0} & \cellcolor{gray!10}{0.09 (0.09, 0.09)} & \cellcolor{gray!10}{low}\\
-1 & 0.08 (0.08, 0.09) & low\\
-\cellcolor{gray!10}{2} & \cellcolor{gray!10}{0.08 (0.08, 0.08)} & \cellcolor{gray!10}{low}\\
-3 & 0.08 (0.08, 0.08) & low\\
-\cellcolor{gray!10}{4} & \cellcolor{gray!10}{0.07 (0.07, 0.08)} & \cellcolor{gray!10}{low}\\
-\addlinespace
-0 & 0.32 (0.31, 0.32) & med\\
-\cellcolor{gray!10}{1} & \cellcolor{gray!10}{0.25 (0.24, 0.25)} & \cellcolor{gray!10}{med}\\
-2 & 0.23 (0.23, 0.24) & med\\
-\cellcolor{gray!10}{3} & \cellcolor{gray!10}{0.24 (0.23, 0.24)} & \cellcolor{gray!10}{med}\\
-4 & 0.24 (0.23, 0.24) & med\\
-\addlinespace
-\cellcolor{gray!10}{0} & \cellcolor{gray!10}{0.59 (0.59, 0.60)} & \cellcolor{gray!10}{high}\\
-1 & 0.67 (0.66, 0.67) & high\\
-\cellcolor{gray!10}{2} & \cellcolor{gray!10}{0.69 (0.68, 0.69)} & \cellcolor{gray!10}{high}\\
-3 & 0.68 (0.68, 0.69) & high\\
-\cellcolor{gray!10}{4} & \cellcolor{gray!10}{0.69 (0.68, 0.70)} & \cellcolor{gray!10}{high}\\
-\bottomrule
-\end{tabular}
-\endgroup{}
-
-}
-
-\end{table}%
-
-\begin{table}
-
-\caption{\label{tbl-categorical-science-imputed}Predicted probability of
-classification for trust in science, now adjusting for missing
-responses. Responses categories are low (1-3), medium (4-5), high
-(6-7).}
-
-\centering{
-
-\centering\begingroup\fontsize{12}{14}\selectfont
-
-\begin{tabular}[t]{lll}
-\toprule
-Years & Predicted (95\% CI) & Response\\
-\midrule
-\cellcolor{gray!10}{0} & \cellcolor{gray!10}{0.09 (0.09, 0.09)} & \cellcolor{gray!10}{low}\\
-1 & 0.09 (0.09, 0.09) & low\\
-\cellcolor{gray!10}{2} & \cellcolor{gray!10}{0.09 (0.09, 0.09)} & \cellcolor{gray!10}{low}\\
-3 & 0.09 (0.09, 0.10) & low\\
-\cellcolor{gray!10}{4} & \cellcolor{gray!10}{0.09 (0.09, 0.09)} & \cellcolor{gray!10}{low}\\
-\addlinespace
-0 & 0.32 (0.31, 0.32) & med\\
-\cellcolor{gray!10}{1} & \cellcolor{gray!10}{0.27 (0.27, 0.28)} & \cellcolor{gray!10}{med}\\
-2 & 0.27 (0.27, 0.28) & med\\
-\cellcolor{gray!10}{3} & \cellcolor{gray!10}{0.29 (0.28, 0.29)} & \cellcolor{gray!10}{med}\\
-4 & 0.30 (0.29, 0.30) & med\\
-\addlinespace
-\cellcolor{gray!10}{0} & \cellcolor{gray!10}{0.59 (0.58, 0.60)} & \cellcolor{gray!10}{high}\\
-1 & 0.63 (0.63, 0.64) & high\\
-\cellcolor{gray!10}{2} & \cellcolor{gray!10}{0.63 (0.63, 0.64)} & \cellcolor{gray!10}{high}\\
-3 & 0.62 (0.61, 0.62) & high\\
-\cellcolor{gray!10}{4} & \cellcolor{gray!10}{0.61 (0.61, 0.62)} & \cellcolor{gray!10}{high}\\
-\bottomrule
-\end{tabular}
-\endgroup{}
-
-}
-
-\end{table}%
-
-Figure~\ref{fig-science-categorical} displays predicted probabilities
-for being classified as low (1--3), medium (4--5), or high (6--7) in
-trust in science over time. Table~\ref{tbl-categorical-science-observed}
-presents these probabilities without adjusting for missing responses.
-Under these conditions, the proportion of respondents in the high
-category appears to increase from the baseline and remain relatively
-elevated. However, after adjusting for missingness (see
-Table~\ref{tbl-categorical-science-imputed}), the predicted
-probabilities show a less stable pattern, with gains in the high
-category tempered and the medium category becoming more prominent. These
-differences underscore that ignoring missing responses can create an
-artificial appearance of stronger sustained trust.
-
-\begin{figure}
-
-\centering{
-
-\pandocbounded{\includegraphics[keepaspectratio]{manuscripts_files/figure-pdf/fig-scientists-categorical-1.pdf}}
-
-}
-
-\caption{\label{fig-scientists-categorical}(A) Predicted probability of
-classification for trust in scientists without adjusting for missingness
-(B) Predicted probability of classification for trust in scientists
-adjusting for missingness. Responses categories are low (1-3), medium
-(4-5), high (6-7) on the 1-7 ordinal scale.}
-
-\end{figure}%
-
-\begin{table}
-
-\caption{\label{tbl-categorical-scientists-observed}Predicted
-probability of classification for trust in scientists without adjusting
-for missing responses. Responses categories are low (1-3), medium (4-5),
-high (6-7).}
-
-\centering{
-
-\centering\begingroup\fontsize{12}{14}\selectfont
-
-\begin{tabular}[t]{lll}
-\toprule
-Years & Predicted (95\% CI) & Response\\
-\midrule
-\cellcolor{gray!10}{0} & \cellcolor{gray!10}{0.12 (0.11, 0.12)} & \cellcolor{gray!10}{low}\\
-1 & 0.09 (0.09, 0.09) & low\\
-\cellcolor{gray!10}{2} & \cellcolor{gray!10}{0.08 (0.08, 0.08)} & \cellcolor{gray!10}{low}\\
-3 & 0.08 (0.08, 0.09) & low\\
-\cellcolor{gray!10}{4} & \cellcolor{gray!10}{0.09 (0.09, 0.09)} & \cellcolor{gray!10}{low}\\
-\addlinespace
-0 & 0.34 (0.33, 0.34) & med\\
-\cellcolor{gray!10}{1} & \cellcolor{gray!10}{0.29 (0.28, 0.29)} & \cellcolor{gray!10}{med}\\
-2 & 0.28 (0.28, 0.28) & med\\
-\cellcolor{gray!10}{3} & \cellcolor{gray!10}{0.30 (0.29, 0.30)} & \cellcolor{gray!10}{med}\\
-4 & 0.33 (0.32, 0.33) & med\\
-\addlinespace
-\cellcolor{gray!10}{0} & \cellcolor{gray!10}{0.55 (0.54, 0.55)} & \cellcolor{gray!10}{high}\\
-1 & 0.62 (0.62, 0.63) & high\\
-\cellcolor{gray!10}{2} & \cellcolor{gray!10}{0.64 (0.63, 0.64)} & \cellcolor{gray!10}{high}\\
-3 & 0.62 (0.61, 0.62) & high\\
-\cellcolor{gray!10}{4} & \cellcolor{gray!10}{0.58 (0.58, 0.59)} & \cellcolor{gray!10}{high}\\
-\bottomrule
-\end{tabular}
-\endgroup{}
-
-}
-
-\end{table}%
-
-\begin{table}
-
-\caption{\label{tbl-categorical-scientists-imputed}Predicted probability
-of classification for trust in scientists, now adjusting for missing
-responses. Responses categories are low (1-3), medium (4-5), high
-(6-7).}
-
-\centering{
-
-\centering\begingroup\fontsize{12}{14}\selectfont
-
-\begin{tabular}[t]{lll}
-\toprule
-Years & Predicted (95\% CI) & Response\\
-\midrule
-\cellcolor{gray!10}{0} & \cellcolor{gray!10}{0.12 (0.12, 0.12)} & \cellcolor{gray!10}{low}\\
-1 & 0.11 (0.10, 0.11) & low\\
-\cellcolor{gray!10}{2} & \cellcolor{gray!10}{0.11 (0.11, 0.11)} & \cellcolor{gray!10}{low}\\
-3 & 0.12 (0.12, 0.12) & low\\
-\cellcolor{gray!10}{4} & \cellcolor{gray!10}{0.13 (0.13, 0.13)} & \cellcolor{gray!10}{low}\\
-\addlinespace
-0 & 0.34 (0.33, 0.35) & med\\
-\cellcolor{gray!10}{1} & \cellcolor{gray!10}{0.31 (0.31, 0.32)} & \cellcolor{gray!10}{med}\\
-2 & 0.31 (0.31, 0.32) & med\\
-\cellcolor{gray!10}{3} & \cellcolor{gray!10}{0.33 (0.33, 0.34)} & \cellcolor{gray!10}{med}\\
-4 & 0.35 (0.35, 0.36) & med\\
-\addlinespace
-\cellcolor{gray!10}{0} & \cellcolor{gray!10}{0.54 (0.53, 0.55)} & \cellcolor{gray!10}{high}\\
-1 & 0.58 (0.58, 0.59) & high\\
-\cellcolor{gray!10}{2} & \cellcolor{gray!10}{0.58 (0.57, 0.58)} & \cellcolor{gray!10}{high}\\
-3 & 0.55 (0.54, 0.56) & high\\
-\cellcolor{gray!10}{4} & \cellcolor{gray!10}{0.52 (0.51, 0.52)} & \cellcolor{gray!10}{high}\\
-\bottomrule
-\end{tabular}
-\endgroup{}
-
-}
-
-\end{table}%
-
-A similar pattern emerges for trust in scientists (see
-Figure~\ref{fig-scientists-categorical}). Without adjusting for
-missingness, the results (shown in
-Table~\ref{tbl-categorical-scientists-observed}) suggest that the
-proportion classified as high in trust remains consistently large. Once
-we incorporate multiple imputation to address missing responses, as
-presented in Table~\ref{tbl-categorical-scientists-imputed}, the
-predicted probabilities shift. The high category becomes less dominant
-over time, and more respondents fall into the medium category than would
-have been inferred without proper adjustment. In other words, accounting
-for nonresponse reveals a more nuanced pattern of trust that does not
-simply trend upward, and this correction prevents inflated estimates of
-stable or increasing trust in scientists.
-
-\subsection{Discussion}\label{discussion}
-
-These findings illustrate that failing to adjust for missing responses
-can systematically distort estimates of public trust in science and
-scientists. Compared to models that ignore missingness, our
-imputation-adjusted analyses indicate that the unadjusted models
-overestimate the proportion of the population with high trust by several
-hundred thousand New Zealand adults and underestimate the proportion
-with low trust by tens to hundreds of thousands. For example, when trust
-in science is not adjusted for missingness, we appear to be
-underestimating the share of the population with low trust by about
-82,000 people, while simultaneously overstating the size of the
-high-trust group by roughly 330,000. Similarly, for trust in scientists,
-the discrepancy in the low-trust population is about 165,000
-individuals, and the high-trust category may be inflated by about
-248,000. These differences represent substantial distortions in
-population-level estimations.
-
-It is important to note that these are minimum bounds of potential
-misestimation, as we cannot measure trust among individuals who declined
-participation at the study's outset. Moreover, we have not established
-any causal relationships, and our objective is not to identify
-determinants of changing trust, but rather to describe and characterise
-differences in trust distributions over time. Still, given that trust in
-science can influence critical actions related to climate change,
-vaccine uptake, and following health advice, accurately documenting
-trust and its temporal shifts is a pressing concern. By accounting for
-missing data, we gain a clearer and more credible picture of
-population-level trust in science and scientists, enabling
-better-informed public health messaging and policy decisions.
-
-\begin{table}
-
-\caption{\label{tbl-categorical-science-imputed}Predicted probability of
-classification for trust in science, now adjusting for missing
-responses. Responses categories are low (1-3), medium (4-5), high
-(6-7).}
-
-\centering{
-
-\begin{tabular}[t]{rrrrrl}
-\toprule
-Years & predicted & std.error & conf.low & conf.high & response.level\\
-\midrule
-0 & 0.09 & 0 & 0.09 & 0.09 & low\\
-0 & 0.32 & 0 & 0.31 & 0.32 & med\\
-0 & 0.59 & 0 & 0.58 & 0.60 & high\\
-1 & 0.09 & 0 & 0.09 & 0.09 & low\\
-1 & 0.27 & 0 & 0.27 & 0.28 & med\\
-\addlinespace
-1 & 0.63 & 0 & 0.63 & 0.64 & high\\
-2 & 0.09 & 0 & 0.09 & 0.09 & low\\
-2 & 0.27 & 0 & 0.27 & 0.28 & med\\
-2 & 0.63 & 0 & 0.63 & 0.64 & high\\
-3 & 0.09 & 0 & 0.09 & 0.10 & low\\
-\addlinespace
-3 & 0.29 & 0 & 0.28 & 0.29 & med\\
-3 & 0.62 & 0 & 0.61 & 0.62 & high\\
-4 & 0.09 & 0 & 0.09 & 0.09 & low\\
-4 & 0.30 & 0 & 0.29 & 0.30 & med\\
-4 & 0.61 & 0 & 0.61 & 0.62 & high\\
-\bottomrule
-\end{tabular}
-
-}
-
-\end{table}%
+\begin{longtable}[]{@{}
+  >{\raggedright\arraybackslash}p{(\linewidth - 12\tabcolsep) * \real{0.1983}}
+  >{\raggedright\arraybackslash}p{(\linewidth - 12\tabcolsep) * \real{0.0690}}
+  >{\raggedright\arraybackslash}p{(\linewidth - 12\tabcolsep) * \real{0.1379}}
+  >{\raggedright\arraybackslash}p{(\linewidth - 12\tabcolsep) * \real{0.1379}}
+  >{\raggedright\arraybackslash}p{(\linewidth - 12\tabcolsep) * \real{0.1379}}
+  >{\raggedright\arraybackslash}p{(\linewidth - 12\tabcolsep) * \real{0.1379}}
+  >{\raggedright\arraybackslash}p{(\linewidth - 12\tabcolsep) * \real{0.1379}}@{}}
+\caption{Retained sample responses by wave by response category
+classified as low (1-3), medium (4-5), or high
+(6-7).}\label{tbl-sample-cat}\tabularnewline
+\toprule\noalign{}
+\begin{minipage}[b]{\linewidth}\raggedright
+Response
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+Level
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+2019
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+2020
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+2021
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+2022
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+2023
+\end{minipage} \\
+\midrule\noalign{}
+\endfirsthead
+\toprule\noalign{}
+\begin{minipage}[b]{\linewidth}\raggedright
+Response
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+Level
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+2019
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+2020
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+2021
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+2022
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+2023
+\end{minipage} \\
+\midrule\noalign{}
+\endhead
+\bottomrule\noalign{}
+\endlastfoot
+\textbf{Trust Science} & low & 3434 (8.2\%) & 2465 (7.5\%) & 2012
+(7.3\%) & 1740 (7.1\%) & 1475 (6.7\%) \\
+& med & 13210 (31.4\%) & 7855 (23.8\%) & 6223 (22.6\%) & 5720 (23.4\%) &
+5128 (23.2\%) \\
+& high & 25474 (60.5\%) & 22729 (68.8\%) & 19335 (70.1\%) & 16999
+(69.5\%) & 15478 (70.1\%) \\
+\textbf{Trust Scientists} & low & 4797 (11.6\%) & 2818 (8.7\%) & 2477
+(9.1\%) & 1910 (8.0\%) & 2008 (9.3\%) \\
+& med & 14161 (34.2\%) & 9385 (28.9\%) & 7448 (27.4\%) & 7107 (29.9\%) &
+6958 (32.4\%) \\
+& high & 22466 (54.2\%) & 20306 (62.5\%) & 17237 (63.5\%) & 14715
+(62.0\%) & 12538 (58.3\%) \\
+\end{longtable}
 
 
 
