--- a/manuscripts/manuscripts.qmd
+++ b/manuscripts/manuscripts.qmd
@@ -382,156 +382,14 @@ combo_scientists_factor <- observed_trust_scientists_factor_plot  + imputed_trus
 <!-- ::: -->
 
 
+### Sample Categorical Distributions Over Time
 
-### Study 2: Categorical Mistrust in Science and Scientists over Time
-
-
-```{r}
-#| label: fig-science-categorical
-#| fig-cap: "(A) Predicted probability of classification for trust in science without adjusting for missingness (B) Predicted probability of classification for trust in science adjusting for missingness. Responses categories are low (1-3), medium (4-5), high (6-7) on the 1-7 ordinal scale."
-#| eval: true
-#| include: true
-#| echo: false
-#| fig-width: 12
-#| fig-height: 12
-
-combo_science_factor
-```
-
-::: {#tbl-categorical-science-observed}
+::: {#tbl-sample-cat}
 ```{r, results='asis'}
 #| eval: true
 #| include: true
 #| echo: false
-observed_trust_science_factor_x <- format(observed_trust_science_factor,  collapse_tables = FALSE, collapse_ci = TRUE,
- digits = 2) 
-
-observed_trust_science_factor_x|> 
-     as.data.frame() %>% 
-    dplyr::rename(Years = years) %>%    
-    dplyr::rename(Response = groups) %>%    
-  kbl(
-    format = "latex",
-    booktabs = TRUE,
-    digits = 3,
-    row.names = FALSE                      # remove row names to eliminate any unintended columns
-  ) |>
-  kable_styling(
-    font_size = 12,
-    latex_options = c("repeat_header", "striped")  # remove "hold_position" to eliminate [!h]
-  )
+tt_summary_table_cat |> print("markdown")
 ```
-Predicted probability of classification for trust in science without adjusting for missing responses. Responses categories are low (1-3), medium (4-5), high (6-7).
+Retained sample responses by wave by response category classified as low (1-3), medium (4-5), or high (6-7).
 :::
-
-
-
-::: {#tbl-categorical-science-imputed}
-```{r}
-#| eval: true
-#| include: true
-#| echo: false
-predictions_ord_science_imp_x <- format(predictions_ord_science_imp,  collapse_tables = FALSE, collapse_ci = TRUE,
- digits = 2) 
-
-predictions_ord_science_imp_x |> 
- as.data.frame() %>% 
-    dplyr::rename(Years = years) %>%    
-    dplyr::rename(Response = groups) %>%    
-  kbl(
-    format = "latex",
-    booktabs = TRUE,
-    digits = 3,
-    row.names = FALSE                      # remove row names to eliminate any unintended columns
-  ) |>
-  kable_styling(
-    font_size = 12,
-    latex_options = c("repeat_header", "striped")  # remove "hold_position" to eliminate [!h]
-  )
-
-
-```
-Predicted probability of classification for trust in science, now adjusting for missing responses. Responses categories are low (1-3), medium (4-5), high (6-7).
-:::
-
-
-@fig-science-categorical displays predicted probabilities for being classified as low (1–3), medium (4–5), or high (6–7) in trust in science over time. @tbl-categorical-science-observed presents these probabilities without adjusting for missing responses. Under these conditions, the proportion of respondents in the high category appears to increase from the baseline and remain relatively elevated. However, after adjusting for missingness (see @tbl-categorical-science-imputed), the predicted probabilities show a less stable pattern, with gains in the high category tempered and the medium category becoming more prominent. These differences underscore that ignoring missing responses can create an artificial appearance of stronger sustained trust.
-
-
-
-
-
-```{r}
-#| label: fig-scientists-categorical
-#| fig-cap: "(A) Predicted probability of classification for trust in scientists without adjusting for missingness (B) Predicted probability of classification for trust in scientists adjusting for missingness. Responses categories are low (1-3), medium (4-5), high (6-7) on the 1-7 ordinal scale."
-#| eval: true
-#| include: true
-#| echo: false
-#| fig-width: 12
-#| fig-height: 12
-
-combo_scientists_factor
-```
-
-::: {#tbl-categorical-scientists-observed}
-```{r, results = 'asis'}
-#| eval: true
-#| include: true
-#| echo: false
-observed_trust_scientists_factor_x <- format(observed_trust_scientists_factor,  collapse_tables = FALSE, collapse_ci = TRUE,
- digits = 2) 
-
-observed_trust_scientists_factor_x|> 
-     as.data.frame() %>% 
-    dplyr::rename(Years = years) %>%    
-    dplyr::rename(Response = groups) %>%    
-  kbl(
-    format = "latex",
-    booktabs = TRUE,
-    digits = 3,
-    row.names = FALSE                      # remove row names to eliminate any unintended columns
-  ) |>
-  kable_styling(
-    font_size = 12,
-    latex_options = c("repeat_header", "striped")  # remove "hold_position" to eliminate [!h]
-  )
-```
-Predicted probability of classification for trust in scientists without adjusting for missing responses. Responses categories are low (1-3), medium (4-5), high (6-7).
-:::
-
-
-::: {#tbl-categorical-scientists-imputed}
-```{r, results = 'asis'}
-#| eval: true
-#| include: true
-#| echo: false
-predictions_ord_scientists_imp_x <- format(predictions_ord_scientists_imp,  collapse_tables = FALSE, collapse_ci = TRUE,
- digits = 2) 
-
-predictions_ord_scientists_imp_x |> 
- as.data.frame() %>% 
-    dplyr::rename(Years = years) %>%    
-    dplyr::rename(Response = groups) %>%    
-  kbl(
-    format = "latex",
-    booktabs = TRUE,
-    digits = 3,
-    row.names = FALSE                      # remove row names to eliminate any unintended columns
-  ) |>
-  kable_styling(
-    font_size = 12,
-    latex_options = c("repeat_header", "striped")  # remove "hold_position" to eliminate [!h]
-  )
-```
-Predicted probability of classification for trust in scientists, now adjusting for missing responses. Responses categories are low (1-3), medium (4-5), high (6-7).
-:::
-
-
-A similar pattern emerges for trust in scientists (see @fig-scientists-categorical). Without adjusting for missingness, the results (shown in @tbl-categorical-scientists-observed) suggest that the proportion classified as high in trust remains consistently large. Once we incorporate multiple imputation to address missing responses, as presented in @tbl-categorical-scientists-imputed, the predicted probabilities shift. The high category becomes less dominant over time, and more respondents fall into the medium category than would have been inferred without proper adjustment. In other words, accounting for nonresponse reveals a more nuanced pattern of trust that does not simply trend upward, and this correction prevents inflated estimates of stable or increasing trust in scientists.
-
-## Discussion 
-
-These findings illustrate that failing to adjust for missing responses can systematically distort estimates of public trust in science and scientists. Compared to models that ignore missingness, our imputation-adjusted analyses indicate that the unadjusted models overestimate the proportion of the population with high trust by several hundred thousand New Zealand adults and underestimate the proportion with low trust by tens to hundreds of thousands. For example, when trust in science is not adjusted for missingness, we appear to be underestimating the share of the population with low trust by about 82,000 people, while simultaneously overstating the size of the high-trust group by roughly 330,000. Similarly, for trust in scientists, the discrepancy in the low-trust population is about 165,000 individuals, and the high-trust category may be inflated by about 248,000. These differences represent substantial distortions in population-level estimations.
-
-It is important to note that these are minimum bounds of potential misestimation, as we cannot measure trust among individuals who declined participation at the study’s outset. Moreover, we have not established any causal relationships, and our objective is not to identify determinants of changing trust, but rather to describe and characterise differences in trust distributions over time. Still, given that trust in science can influence critical actions related to climate change, vaccine uptake, and following health advice, accurately documenting trust and its temporal shifts is a pressing concern. By accounting for missing data, we gain a clearer and more credible picture of population-level trust in science and scientists, enabling better-informed public health messaging and policy decisions.
-
