--- a/manuscripts/24-john-kerr-growth-trust-science/24-jk-growth-trust-science-T15.qmd
+++ b/manuscripts/24-john-kerr-growth-trust-science/24-jk-growth-trust-science-T15.qmd
@@ -2,7 +2,7 @@
 title: "Declining Trust in Science: Longitudinal Evidence From A National Panel Study in New Zealand Years 2019-2024"
 abstract: |
   The public’s perception of science influences a wide range of behaviours, from adherence to public health guidance to support for climate action. This study uses nationally representative panel data from New Zealand to examine changes in the value placed on science and trust in scientists between 2019 and 2024 (*N* = 42,681, New Zealand Attitudes and Values Study). **Study 1** estimates longitudinal trajectories for attitudes to science and scientists, applying multiple imputation to address biases arising from systematic attrition. **Study 2** models trust responses categorically, distinguishing low (1–3), medium (4–5), and high (6–7) trust. Results indicate that the value placed on science and trust in scientists rose after New Zealand’s response to COVID-19, then subsequently declined. Categorical analysis suggests that the proportion reporting low value placed on science remained stable, while the proportion reporting high value decreased. For trust in scientists, low trust increased, and high trust declined. Comparing multiply imputed outcomes with observed data reveals that even a minimum bound of bias leads to misestimations of approximately 2–3% of the population for low valuations and low trust, and 6–8% for high valuations and high trust. These findings underscore the importance of exercising caution when interpreting population-based estimates of trust in science. 
-   **KEYWORDS**: *Institutional Trust*; *Longitudinal*; *Measurement*; *Missing Data*; *Political*.
+   **KEYWORDS**: *Institutional Trust*; *Longitudinal*; *Measurement*; *Missing Data*; *Political*; *Values*.
 author: 
   - name: John Kerr
     affiliation:  University of Otago, New Zealand
@@ -62,7 +62,9 @@ format:
       - \input{/Users/joseph/GIT/latex/latex-for-quarto.tex}
       - \let\oldtabular\tabular
       - \renewcommand{\tabular}{\small\oldtabular}
-      - \setlength{\tabcolsep}{4pt}  % Adjust this value as needed
+      - \setlength{\tabcolsep}{4pt}  % adjust this value as needed
+  docx:
+    default: false
 date: last-modified
 execute:
   echo: false
@@ -80,8 +82,7 @@ csl: /Users/joseph/GIT/templates/csl/camb-a.csl
 #| include: false
 #| eval: true
 
-  # docx:
-  #   default: false
+
 # detach("package:margot", unload = TRUE)
 # devtools::install_github("go-bayes/margot")
 library(margot)
@@ -247,7 +248,7 @@ plot_trust_science_observed_continuous <- plot (
   colors = "quadro",
   limits = c(.5, 7.5),
   dot_size = 2)+ geom_point(aes(x = x, y = predicted), color = "red", size = .2, alpha =1)  +
-  labs(x = "Years: 2019-2024", y = "Social Value of Science (1-7)", title = "Average Value of Science: Retained Sample") + theme_bw() 
+  labs(x = "Years: 2019-2024", y = "Social Value of Science (1-7)", title = "Average Social Value of Science: Retained Sample") + theme_bw() 
 
 plot_trust_scientists_observed_continuous <- plot (
   predictions_gee_scientists_observed,
@@ -272,7 +273,7 @@ plot_trust_science_imputed_continuous <- plot (
   colors = "us",
   limits = c(.5, 7.5),
   dot_size = 2)+ geom_point(aes(x = x, y = predicted), color = "dodgerblue", size = .2, alpha =1)  +
-  labs(x = "Years: 2019-2024", y = "Social Value of Science (1-7)", title = "Value of Science: Imputed Missing Responses") + theme_bw() 
+  labs(x = "Years: 2019-2024", y = "Social Value of Science (1-7)", title = "Average Social Value of Science: Imputed Missing Responses") + theme_bw() 
 
 
 
@@ -286,7 +287,7 @@ plot_trust_scientists_imputed_continuous <- plot (
   colors = "us",
   limits = c(.5, 7.5),
   dot_size = 2)+ geom_point(aes(x = x, y = predicted), color = "dodgerblue", size = .2, alpha =1)  +
-  labs(x =  "Years: 2019-2024", y = "Trust in Scientists (1-7)", title = "Trust in Scientists: Imputed Missing Responses") + theme_bw()
+  labs(x =  "Years: 2019-2024", y = "Trust in Scientists (1-7)", title = "Average Trust in Scientists: Imputed Missing Responses") + theme_bw()
 
 
 
@@ -299,7 +300,7 @@ combo_scientists_continuous <- plot_trust_scientists_observed_continuous + plot_
   plot_layout(guides = "collect") &  theme(legend.position = 'bottom') 
 
 
-combo_all_continuous <- (plot_trust_science_observed_continuous + plot_trust_science_imputed_continuous)/ (plot_trust_scientists_observed_continuous + plot_trust_scientists_imputed_continuous) + plot_annotation(subtitle = "NZAVS waves 11-14 (years 2019-2023), N = 42,681 (New Zealand Attitudes and Values Study)", tag_levels = "A", title = "Value of Science and Scientists over Time: Observed vs Imputed Continuous Responses") +
+combo_all_continuous <- (plot_trust_science_observed_continuous + plot_trust_science_imputed_continuous)/ (plot_trust_scientists_observed_continuous + plot_trust_scientists_imputed_continuous) + plot_annotation(subtitle = "NZAVS waves 11-14 (years 2019-2023), N = 42,681 (New Zealand Attitudes and Values Study)", tag_levels = "A", title = "Social Value of Science and Scientists over Time: Observed vs Imputed Continuous Responses") +
   plot_layout(guides = "collect") &  theme(legend.position = 'bottom')  
 
 # margot::margot_save_png(combo_all,base_filename = "trust_science_observed_vs_imputed", save_path = here::here(push_mods), height=20,width=20, dpi = 500)
@@ -327,7 +328,7 @@ observed_trust_science_factor_plot =  plot(
   limits = c(0, 1),
   dot_size = 2
 )+ geom_point(aes(x = x, y = predicted), color = "red", size = .2, alpha =1)  +
-  labs(x =  "Years: 2019-2024", y = "Social Value of Science (low = 1-3, med = 4-5, high = 6-7)", title = "Average Value of Science: Retained Sample", 
+  labs(x =  "Years: 2019-2024", y = "Social Value of Science (low = 1-3, med = 4-5, high = 6-7)", title = "Average Social Value of Science: Retained Sample", 
        subtitle = "Predicted Probability of Response: Low = 1-3, Medium = 4-5, High = 6-7") + theme_bw()
 
 observed_trust_scientists_factor_plot =  plot(
@@ -350,7 +351,7 @@ imputed_trust_science_factor_plot <- plot(
   colors = "us",
   limits = c(0, 1)
   )+ geom_point(aes(x = x, y = predicted), color = "dodgerblue", size = .2, alpha =1)  +
-  labs(x =  "Years: 2019-2024", y = "Social Value of Science (low = 1-3, med = 4-5, high = 6-7)", title = "Average Value of Science: Imputed Missing Responses", 
+  labs(x =  "Years: 2019-2024", y = "Social Value of Science (low = 1-3, med = 4-5, high = 6-7)", title = "Average Social Value of Science: Imputed Missing Responses", 
        subtitle = "Predicted Probability of Response: Low = 1-3, Medium = 4-5, High = 6-7") + theme_bw()
 
 imputed_trust_scientists_factor_plot <- plot(
@@ -360,12 +361,12 @@ imputed_trust_scientists_factor_plot <- plot(
   colors = "us",
   limits = c(0, 1)
 )+ geom_point(aes(x = x, y = predicted), color = "dodgerblue", size = .2, alpha =1)  +
-  labs(x =  "Years: 2019-2024", y = "Trust in Science (low = 1-3, med = 4-5, high = 6-7)", title = "Average Trust in Scientists: Imputed Missing Responses",
+  labs(x =  "Years: 2019-2024", y = "Trust in Scientists (low = 1-3, med = 4-5, high = 6-7)", title = "Average Trust in Scientists: Imputed Missing Responses",
             subtitle = "Predicted Probability of Response: Low = 1-3, Medium = 4-5, High = 6-7") + theme_bw()  +   theme(
     plot.title = element_text(face = "bold", size = 14))
 
 
-combo_science_factor <- observed_trust_science_factor_plot  + imputed_trust_science_factor_plot + plot_annotation(subtitle = "NZAVS waves 11-14 (years 2019-2024), N = 42,681 (New Zealand Attitudes and Values Study)", tag_levels = "A", title = "Value of Science: Observed vs Imputed Missing Responses: Multinomial Response Model\n'Our Society Places Too Much Emphasis on Science'") +
+combo_science_factor <- observed_trust_science_factor_plot  + imputed_trust_science_factor_plot + plot_annotation(subtitle = "NZAVS waves 11-14 (years 2019-2024), N = 42,681 (New Zealand Attitudes and Values Study)", tag_levels = "A", title = "Social Value of Science: Observed vs Imputed Missing Responses: Multinomial Response Model\n'Our Society Places Too Much Emphasis on Science'") +
   plot_layout(guides = "collect") &  theme(legend.position = 'bottom')  +   theme(
     plot.title = element_text(face = "bold", size = 14))
 
@@ -675,7 +676,7 @@ Cohort proportions classified as low, medium, or high (imputed)
 :::
 
 
-@tbl-sample-cat-imp classifies imputed responses into low, medium, and high categories. For valuing science, the proportion of respondents reporting low trust remains relatively stable, hovering around 8% over time. In contrast, the initially large high-trust category (around 60%) rises to 65.8% in 2020, then recedes to 62.8% by 2023, suggesting that some of the early gains in trust may have been short-lived once nonresponse patterns are accounted for. For trust in scientists, imputation indicates a somewhat different trajectory. Initially, 11.9% reported low trust in 2019, decreasing to 10.1% in 2020, but this figure rises back to 12.8% by 2023. The medium and high categories show corresponding shifts, reflecting a more complex pattern than the non-imputed data suggested.
+@tbl-sample-cat-imp classifies imputed responses into low, medium, and high categories. For valuing science, the proportion of respondents reporting low trust remains relatively stable, hovering around 8%-9% over time. In contrast, the initially large high-trust category (around 60%) rises to 65.8% in 2020, then recedes to 62.8% by 2023, suggesting that some of the early gains in trust may have been short-lived once nonresponse patterns are accounted for. For trust in scientists, imputation indicates a somewhat different trajectory. Initially, 11.9% reported low trust in 2019, decreasing to 10.1% in 2020, but this figure rises back to 12.8% by 2023. The medium and high categories show corresponding shifts, reflecting a more complex pattern than the non-imputed data suggested.
 
 [Appendix d](#appendix-d) @fig-alluv-science-imp and @fig-alluv-scientists-imp visually present these transitions. Although early gains in high trust appeared promising, shifts over time are not uniformly in one direction. Instead, the imputed data indicate gradual redistributions of respondents across low, medium, and high categories. Such patterns underscore the importance of correcting for missingness before drawing conclusions about population-level changes in trust.
 
@@ -691,7 +692,7 @@ Cohort proportions classified as low, medium, or high (imputed)
 #| eval: true
 #| include: true
 #| echo: false
-#| fig-width: 12
+#| fig-width: 14
 #| fig-height: 12
 
 combo_science_continuous
@@ -715,7 +716,7 @@ predictions_gee_science_observed_x |>
     row.names = FALSE                      # remove row names to eliminate any unintended columns
   ) |>
   kable_styling(
-    font_size = 12,
+    font_size = 14,
     latex_options = c("repeat_header", "striped")  # remove "hold_position" to eliminate [!h]
   )
 ```
@@ -740,7 +741,7 @@ predictions_gee_science_imputed_x |>
     row.names = FALSE                      # remove row names to eliminate any unintended columns
   ) |>
   kable_styling(
-    font_size = 12,
+    font_size = 14,
     latex_options = c("repeat_header", "striped")  # remove "hold_position" to eliminate [!h]
   )
 ```
@@ -762,7 +763,7 @@ Predicted population average value placed on science over time, adjusting for mi
 #| eval: true
 #| include: true
 #| echo: false
-#| fig-width: 12
+#| fig-width: 14
 #| fig-height: 12
 
 combo_scientists_continuous
@@ -786,7 +787,7 @@ predictions_gee_scientists_observed_x |>
     row.names = FALSE                      # remove row names to eliminate any unintended columns
   ) |>
   kable_styling(
-    font_size = 12,
+    font_size = 14,
     latex_options = c("repeat_header", "striped")  # remove "hold_position" to eliminate [!h]
   )
 
@@ -813,7 +814,7 @@ predictions_gee_scientists_imputed_x |>
     row.names = FALSE                      # remove row names to eliminate any unintended columns
   ) |>
   kable_styling(
-    font_size = 12,
+    font_size = 14,
     latex_options = c("repeat_header", "striped")  # remove "hold_position" to eliminate [!h]
   )
 
@@ -837,7 +838,7 @@ A similar pattern emerges for trust in scientists, presented in @fig-scientists-
 #| eval: true
 #| include: true
 #| echo: false
-#| fig-width: 12
+#| fig-width: 14
 #| fig-height: 12
 
 combo_science_factor
@@ -862,7 +863,7 @@ observed_trust_science_factor_x|>
     row.names = FALSE                      # remove row names to eliminate any unintended columns
   ) |>
   kable_styling(
-    font_size = 12,
+    font_size = 14,
     latex_options = c("repeat_header", "striped")  # remove "hold_position" to eliminate [!h]
   )
 ```
@@ -890,7 +891,7 @@ predictions_ord_science_imp_x |>
     row.names = FALSE                      # remove row names to eliminate any unintended columns
   ) |>
   kable_styling(
-    font_size = 12,
+    font_size = 14,
     latex_options = c("repeat_header", "striped")  # remove "hold_position" to eliminate [!h]
   )
 
@@ -917,7 +918,7 @@ Note that in Studies 1a and 1b, the response distributions are scattered across 
 #| eval: true
 #| include: true
 #| echo: false
-#| fig-width: 12
+#| fig-width: 14
 #| fig-height: 12
 
 combo_scientists_factor
@@ -942,7 +943,7 @@ observed_trust_scientists_factor_x|>
     row.names = FALSE                      # remove row names to eliminate any unintended columns
   ) |>
   kable_styling(
-    font_size = 12,
+    font_size = 14,
     latex_options = c("repeat_header", "striped")  # remove "hold_position" to eliminate [!h]
   )
 ```
@@ -969,7 +970,7 @@ predictions_ord_scientists_imp_x |>
     row.names = FALSE                      # remove row names to eliminate any unintended columns
   ) |>
   kable_styling(
-    font_size = 12,
+    font_size = 14,
     latex_options = c("repeat_header", "striped")  # remove "hold_position" to eliminate [!h]
   )
 ```
@@ -983,7 +984,7 @@ A similar pattern emerges for trust in scientists (see @fig-scientists-categoric
 
 These findings illustrate that failing to adjust for missing responses can systematically distort estimates of public attitudes to science and scientists. Compared to models that ignore missingness, our imputation-adjusted analyses indicate that the unadjusted models overestimate the proportion of the population with high trust by several hundred thousand New Zealand adults and underestimate the proportion with low trust by tens to hundreds of thousands. For example, when the missing attitudes to science are not adjusted, we underestimate the share of the population with low trust by about 82,000 people, and simultaneously overstate the size of the high-trust group by about 330,000. Similarly, for trust in scientists, the discrepancy in the low-trust population is about 165,000 individuals, and the high-trust category may be inflated by about 248,000. These differences represent substantial distortions of attitudes to science and scientists in the general population of 4.1 million adults.
 
-It is important to note, once again, that these are minimum bounds of potential distortion, as we cannot measure trust among the population who declined participation at the study’s outset. Moreover, we have not established any causal relationships. Our objective is not to identify determinants of changing trust, but rather to describe and characterise differences in trust distributions over time in that part of the general population whose attitudes to science did not prevent them from enlisting in a scientific study prior to COVID-19. Still, given that trust in science can influence critical actions related to climate change [@bogert2024effect], vaccine uptake [@pagliaro2021trust], and following health advice [@rueger2021perception], accurately documenting trust and its temporal shifts is a pressing concern. By accounting for missing data, we gain a clearer and more credible picture of population-level trust in science and scientists, enabling better-informed public health messaging and policy decisions.
+It is important to note, once again, that these are minimum bounds of potential distortion, as we cannot measure trust among the population who declined participation at the study’s outset. Moreover, we have not established any causal relationships. Our objective is not to identify determinants of changing trust, but rather to describe and characterise differences in trust distributions over time in that part of the general population whose attitudes to science did not prevent them from enlisting in a scientific study prior to COVID-19. Still, given that trust in science can influence critical actions related to climate change [@bogert2024effect], vaccine uptake [@pagliaro2021trust], and following health advice [@rueger2021perception], accurately documenting trust and its temporal shifts is a pressing concern. By accounting for missing data, we gain a clearer and more credible picture.
 
 
 {{< pagebreak >}}
@@ -1005,7 +1006,7 @@ The New Zealand Attitudes and Values Study is supported by a grant from the Temp
 
 ### Author Statement
 
-**TBA**: JK suggested the measures and led the study. CGS led data collection. JB developed the analytic approach and did the analysis. JB and CGS obtained the funding. **All authors had input into the manuscript.**
+**TBA**: JK, CGS, DO, MW, and KY developed the measures for the New Zealand Attitudes and Values Study. JB developed the analytic approach and did the analysis. CGS led data collection. JB and CGS obtained the funding. **All authors had input into the manuscript.**
 
 
 {{< pagebreak >}}
@@ -1066,8 +1067,19 @@ timeline_histogram
 {{< pagebreak >}}
 
 
-## Appendix C: Alluvial Graph of Showing Categorical Responses to Trust in Science and Trust in Scientists: No Adjustment For Missing Data. {#appendix-c}
+## Appendix C: Alluvial Graph of Showing Categorical Responses to Value of Science and Trust in Scientists: No Adjustment For Missing Data. {#appendix-c}
 
+```{r}
+#| label: fig-alluv-scientists-sample
+#| fig-cap: "Alluvial plot suggests increasing flow of value of science for the retained sample."
+#| eval: true
+#| include: true
+#| echo: false
+#| fig-width: 12
+#| fig-height: 12
+
+sankey_plot_science_sample
+```
 
 
 ```{r}
@@ -1079,32 +1091,22 @@ timeline_histogram
 #| fig-width: 12
 #| fig-height: 12
 
-sankey_plot_science_sample
-```
-
-```{r}
-#| label: fig-alluv-scientists-sample
-#| fig-cap: "Alluvial plot suggests increasing flow of trust in science for the retained sample."
-#| eval: true
-#| include: true
-#| echo: false
-#| fig-width: 12
-#| fig-height: 12
-
 sankey_plot_st_sample
+
 ```
+
 
 
 {{< pagebreak >}}
 
 
-## Appendix D: Alluvial Graphs of Showing Categorical Responses to Trust in Science and Trust in Scientists: Adjusting For Missing Data. {#appendix-d}
+## Appendix D: Alluvial Graphs of Showing Categorical Responses to Social Value of Science and Trust in Scientists: Adjusting For Missing Data. {#appendix-d}
 
-@fig-alluv-science-imp and @g-alluv-scientists-imp depict the dynamics of categorical responses to trust in science and scientists. following 2020, there is a decline in the value placed on scientific institutions and a growth of mistrust in scientists. Our analysis presents the a minimal bound for such mistrust because we cannot account for the mistrust of the population who declined to praticipate in New Zealand Attitudes and Values Study wave 2019 (time 11).
+@fig-alluv-science-imp and @g-alluv-scientists-imp depict the dynamics of categorical responses for attitudes to science and scientists. Following 2020, there is a decline in the value placed on scientific institutions and a growth of mistrust in scientists. Our analysis presents the a minimal bound for such mistrust because we cannot account for the mistrust of the population who declined to praticipate in New Zealand Attitudes and Values Study wave 2019 (time 11).
 
 ```{r}
 #| label: fig-alluv-science-imp
-#| fig-cap: "Alluvial plot suggests declines in trust in science for the imputed cohort."
+#| fig-cap: "Alluvial plot suggests declines in value of science for the imputed cohort."
 #| eval: true
 #| include: true
 #| echo: false
