--- a/manuscripts/24-john-kerr-growth-trust-science/24-jk-growth-trust-science-T15.tex
+++ b/manuscripts/24-john-kerr-growth-trust-science/24-jk-growth-trust-science-T15.tex
@@ -152,7 +152,7 @@
 \input{/Users/joseph/GIT/latex/latex-for-quarto.tex}
 \let\oldtabular\tabular
 \renewcommand{\tabular}{\small\oldtabular}
-\setlength{\tabcolsep}{4pt}  % Adjust this value as needed
+\setlength{\tabcolsep}{4pt}  % adjust this value as needed
 \makeatletter
 \@ifpackageloaded{caption}{}{\usepackage{caption}}
 \AtBeginDocument{%
@@ -300,7 +300,7 @@ and 6--8\% for high valuations and high trust. These findings underscore
 the importance of exercising caution when interpreting population-based
 estimates of trust in science. \textbf{KEYWORDS}: \emph{Institutional
 Trust}; \emph{Longitudinal}; \emph{Measurement}; \emph{Missing Data};
-\emph{Political}.
+\emph{Political}; \emph{Values}.
 \end{abstract}
 
 
@@ -829,7 +829,7 @@ Level
 Table~\ref{tbl-sample-cat-imp} classifies imputed responses into low,
 medium, and high categories. For valuing science, the proportion of
 respondents reporting low trust remains relatively stable, hovering
-around 8\% over time. In contrast, the initially large high-trust
+around 8\%-9\% over time. In contrast, the initially large high-trust
 category (around 60\%) rises to 65.8\% in 2020, then recedes to 62.8\%
 by 2023, suggesting that some of the early gains in trust may have been
 short-lived once nonresponse patterns are accounted for. For trust in
@@ -879,7 +879,7 @@ data.}
 
 \centering{
 
-\centering\begingroup\fontsize{12}{14}\selectfont
+\centering\begingroup\fontsize{14}{16}\selectfont
 
 \begin{tabular}[t]{ll}
 \toprule
@@ -905,7 +905,7 @@ average value placed on science over time, adjusting for missing data.}
 
 \centering{
 
-\centering\begingroup\fontsize{12}{14}\selectfont
+\centering\begingroup\fontsize{14}{16}\selectfont
 
 \begin{tabular}[t]{ll}
 \toprule
@@ -971,7 +971,7 @@ missing data.}
 
 \centering{
 
-\centering\begingroup\fontsize{12}{14}\selectfont
+\centering\begingroup\fontsize{14}{16}\selectfont
 
 \begin{tabular}[t]{ll}
 \toprule
@@ -997,7 +997,7 @@ average value placed on science over time adjusting for missing data.}
 
 \centering{
 
-\centering\begingroup\fontsize{12}{14}\selectfont
+\centering\begingroup\fontsize{14}{16}\selectfont
 
 \begin{tabular}[t]{ll}
 \toprule
@@ -1059,7 +1059,7 @@ high (6-7).}
 
 \centering{
 
-\centering\begingroup\fontsize{12}{14}\selectfont
+\centering\begingroup\fontsize{14}{16}\selectfont
 
 \begin{tabular}[t]{lll}
 \toprule
@@ -1099,7 +1099,7 @@ responses. Responses categories are low (1-3), medium (4-5), high
 
 \centering{
 
-\centering\begingroup\fontsize{12}{14}\selectfont
+\centering\begingroup\fontsize{14}{16}\selectfont
 
 \begin{tabular}[t]{lll}
 \toprule
@@ -1179,7 +1179,7 @@ high (6-7).}
 
 \centering{
 
-\centering\begingroup\fontsize{12}{14}\selectfont
+\centering\begingroup\fontsize{14}{16}\selectfont
 
 \begin{tabular}[t]{lll}
 \toprule
@@ -1219,7 +1219,7 @@ responses. Responses categories are low (1-3), medium (4-5), high
 
 \centering{
 
-\centering\begingroup\fontsize{12}{14}\selectfont
+\centering\begingroup\fontsize{14}{16}\selectfont
 
 \begin{tabular}[t]{lll}
 \toprule
@@ -1297,8 +1297,7 @@ vaccine uptake (\citeproc{ref-pagliaro2021trust}{Pagliaro \emph{et al.}
 (\citeproc{ref-rueger2021perception}{Rueger \emph{et al.} 2021}),
 accurately documenting trust and its temporal shifts is a pressing
 concern. By accounting for missing data, we gain a clearer and more
-credible picture of population-level trust in science and scientists,
-enabling better-informed public health messaging and policy decisions.
+credible picture.
 
 \newpage{}
 
@@ -1330,10 +1329,10 @@ it.
 
 \subsubsection{Author Statement}\label{author-statement}
 
-\textbf{TBA}: JK suggested the measures and led the study. CGS led data
-collection. JB developed the analytic approach and did the analysis. JB
-and CGS obtained the funding. \textbf{All authors had input into the
-manuscript.}
+\textbf{TBA}: JK, CGS, DO, MW, and KY developed the measures for the New
+Zealand Attitudes and Values Study. JB developed the analytic approach
+and did the analysis. CGS led data collection. JB and CGS obtained the
+funding. \textbf{All authors had input into the manuscript.}
 
 \newpage{}
 
@@ -1563,8 +1562,21 @@ Values Study Daily Data Collection Wave 2019 (time 11) - Wave 2023 (time
 \newpage{}
 
 \subsection{Appendix C: Alluvial Graph of Showing Categorical Responses
-to Trust in Science and Trust in Scientists: No Adjustment For Missing
+to Value of Science and Trust in Scientists: No Adjustment For Missing
 Data.}\label{appendix-c}
+
+\begin{figure}
+
+\centering{
+
+\pandocbounded{\includegraphics[keepaspectratio]{24-jk-growth-trust-science-T15_files/figure-pdf/fig-alluv-scientists-sample-1.pdf}}
+
+}
+
+\caption{\label{fig-alluv-scientists-sample}Alluvial plot suggests
+increasing flow of value of science for the retained sample.}
+
+\end{figure}%
 
 \begin{figure}
 
@@ -1579,30 +1591,17 @@ increasing flow of trust in scientists for the retained sample.}
 
 \end{figure}%
 
-\begin{figure}
-
-\centering{
-
-\pandocbounded{\includegraphics[keepaspectratio]{24-jk-growth-trust-science-T15_files/figure-pdf/fig-alluv-scientists-sample-1.pdf}}
-
-}
-
-\caption{\label{fig-alluv-scientists-sample}Alluvial plot suggests
-increasing flow of trust in science for the retained sample.}
-
-\end{figure}%
-
 \newpage{}
 
 \subsection{Appendix D: Alluvial Graphs of Showing Categorical Responses
-to Trust in Science and Trust in Scientists: Adjusting For Missing
-Data.}\label{appendix-d}
+to Social Value of Science and Trust in Scientists: Adjusting For
+Missing Data.}\label{appendix-d}
 
 Figure~\ref{fig-alluv-science-imp} and
 (\citeproc{ref-g-alluv-scientists-imp}{\textbf{g-alluv-scientists-imp?}})
-depict the dynamics of categorical responses to trust in science and
-scientists. following 2020, there is a decline in the value placed on
-scientific institutions and a growth of mistrust in scientists. Our
+depict the dynamics of categorical responses for attitudes to science
+and scientists. Following 2020, there is a decline in the value placed
+on scientific institutions and a growth of mistrust in scientists. Our
 analysis presents the a minimal bound for such mistrust because we
 cannot account for the mistrust of the population who declined to
 praticipate in New Zealand Attitudes and Values Study wave 2019 (time
@@ -1617,7 +1616,7 @@ praticipate in New Zealand Attitudes and Values Study wave 2019 (time
 }
 
 \caption{\label{fig-alluv-science-imp}Alluvial plot suggests declines in
-trust in science for the imputed cohort.}
+value of science for the imputed cohort.}
 
 \end{figure}%
 
